<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#333333"
        android:id="@+id/relativeLayout">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/lepay_result_Success"
           android:textColor="#ffffff"
           android:textSize="18sp"
           android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:orientation="vertical"
        android:padding="16dip"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lepay_result_Commodity"
                android:layout_weight="4"
                android:textColor="#a5a5a5"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/lepayTV_commodityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#333333"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lepay_result_Transaction_Number"
                android:layout_weight="4"
                android:textColor="#a5a5a5"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/lepayTV_transactionNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#333333"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lepay_result_Closing_Time"
                android:layout_weight="4"
                android:textColor="#a5a5a5"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/lepayTV_closingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#333333"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lepay_result_Payment_Method"
                android:layout_weight="4"
                android:textColor="#a5a5a5"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/lepayTV_paymentMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#333333"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:text="@string/lepay_result_button"
        android:layout_below="@+id/linearLayout"
        android:textColor="#ffffff"
        android:background="#6bceef"
        android:layout_margin="16dip"/>
</RelativeLayout>
