<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#333333">

        <ImageView
            android:id="@+id/lepayIV_BackImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dip"
            android:src="@drawable/lepay_back_icon"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/lepay_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lepay_getCide_topTitle"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="48dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dip"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            >

            <LinearLayout
                android:layout_marginTop="27dip"
                android:id="@+id/lepayLV_getCode_Amount"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lepayTV_getCode_Amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#62c455"
                    android:textSize="28sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lepay_result_yuan"
                    android:textColor="#62c455"
                    android:textSize="28sp"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="11dip"
                android:id="@+id/lepayTV_getCode_Commodity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lepayLV_getCode_Amount"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_marginTop="8dip"
                android:id="@+id/lepayLV_getCode_Tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_below="@+id/lepayTV_getCode_Commodity"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lepay_getCode_tip1"
                    android:textSize="16sp"
                    android:textColor="#8f8f8f"/>
                <TextView
                    android:id="@+id/lepayTV_PhoneLast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8888"
                    android:textSize="16sp"
                    android:textColor="#62c455"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lepay_getCode_tip2"
                    android:textSize="16sp"
                    android:textColor="#8f8f8f"/>

            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="20dip"
                android:id="@+id/lepayLV_getCode_Code"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:orientation="horizontal"
                android:layout_below="@+id/lepayLV_getCode_Tip">
                
                <EditText
                    android:id="@+id/lepayET_PhoneCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lepay_getCode_hint"
                    android:paddingLeft="9dip"
                    android:inputType="numberSigned"
                    android:textColor="#000000"
                    android:textColorHint="#8f8f8f"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:background="@drawable/lepay_input"/>

                <Button
                    android:id="@+id/lepayBT_getCode_ReSend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dip"
                    android:layout_weight="2"
                    android:textColor="#ffffff"
                    android:background="@drawable/lepay_btn_gray"
                    android:textSize="14sp"
                    android:text="@string/lepay_getCode_Send"/>
                
            </LinearLayout>

            <Button
                android:layout_marginTop="12dip"
                android:layout_below="@+id/lepayLV_getCode_Code"
                android:id="@+id/lepay_getCode_Submit"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:background="@drawable/lepay_btn_submit_seletor"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
