<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ffffff">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="#333333">

            <TextView
                android:id="@+id/lepay_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                android:textSize="18sp" />

        </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="48dip"
        android:layout_height="match_parent"
        >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="27dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lepay_result_Commodity"
                android:textColor="#a1a1a1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lepayTV_commodityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lepay_result_Transaction_Number"
                android:textColor="#a1a1a1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lepayTV_transactionNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lepay_result_Closing_Time"
                android:textColor="#a1a1a1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lepayTV_closingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="left|center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lepay_result_Payment_Method"
                android:textColor="#a1a1a1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lepayTV_paymentMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lepayLV_Result_Status"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:visibility="gone"
            android:gravity="left|center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lepay_result_Payment_Status"
                android:textColor="#a1a1a1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lepayTV_paymentStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="#62c455"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/lepay_result_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="17dip"
        android:background="@drawable/lepay_line" />

    <RelativeLayout
        android:id="@+id/lepay_amount_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lepay_result_line">

        <TextView
            android:id="@+id/lepay_amout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lepay_result_amount"
            android:layout_marginTop="17dip"
            android:layout_centerHorizontal="true"
            android:textColor="#62c455"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_below="@+id/lepay_amout_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lepayTV_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#62c455"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lepay_result_yuan"
                android:textColor="#62c455"
                android:textSize="28sp" />

        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/lepayBT_submitButton"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_below="@+id/lepay_amount_relativeLayout"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginBottom="36dip"
        android:layout_marginTop="36dip"
        android:background="@drawable/lepay_btn_submit_seletor"
        android:textColor="#ffffff" />



 </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <ImageView
            android:id="@+id/lepayIV_logo"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:src="@drawable/lepay_logo_lepay"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lepay_cope_text"
            android:layout_below="@+id/lepayIV_logo"
            android:textSize="10sp"
            android:textColor="#a1a1a1"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    </FrameLayout>
