<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#333333">

        <ImageView
            android:id="@+id/lepayIV_BackImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="16dip"
            android:src="@drawable/lepay_back_icon" />

        <TextView
            android:id="@+id/lepay_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lepay_inputCardNumber_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="48dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dip"
        android:paddingLeft="12dip"
        android:paddingRight="12dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="24dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lepay_inputCardNumber_tip"
                android:textColor="#4f4f4f"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/lepayET_addCard_Number"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="14dip"
                android:background="@drawable/lepay_input"
                android:inputType="numberSigned"
                android:hint="@string/lepay_inputCardNumber_Hint"
                android:singleLine="true"
                android:paddingLeft="10dip"
                android:textColor="#000000"
                android:textColorHint="#a4a4a4"
                android:textSize="14sp" />

            <TextView
                android:layout_marginTop="12dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="招商银行信用卡"
                android:textColor="#a4a4a4"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/lepayBT_addCard_submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:background="@drawable/lepay_next_disable" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
